--- a/Croquis(.NET Framework)/MainWindow.xaml
+++ b/Croquis(.NET Framework)/MainWindow.xaml
@@ -1,34 +1,41 @@
 ﻿<Window x:Name="mainwindow" x:Class="Croquis_.NET_Framework_.MainWindow"
+        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Croquis_.NET_Framework_"
         mc:Ignorable="d"
-        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
-         Title="croquis" Height="450" Width="800" AllowDrop="True" PreviewKeyDown="mainwindow_PreviewKeyDown" PreviewMouseLeftButtonDown="mainwindow_PreviewMouseLeftButtonDown" PreviewMouseDoubleClick="mainwindow_PreviewMouseDoubleClick">
+         Title="Croquis Slideshow" AllowDrop="True" PreviewKeyDown="mainwindow_PreviewKeyDown" PreviewMouseLeftButtonDown="mainwindow_PreviewMouseLeftButtonDown" PreviewMouseDoubleClick="mainwindow_PreviewMouseDoubleClick" Height="400" Width="600">
     
     <Window.ContextMenu>
-        <fw:AcrylicContextMenu>
-            <MenuItem Header="表示時間">
-                <MenuItem x:Name="item10" Header="10秒" Click="item10_Click"/>
-                <MenuItem x:Name="item30" Header="30秒" Click="item30_Click"/>
-                <MenuItem x:Name="item60" Header="60秒" Click="item60_Click"/>
-                <MenuItem x:Name="item90" Header="90秒" Click="item90_Click"/>
-                <MenuItem x:Name="item180" Header="3分" Click="item180_Click"/>
-                <MenuItem x:Name="item300" Header="5分" Click="item300_Click"/>
+        <fw:AcrylicContextMenu HasDropShadow="True">
+            <MenuItem Header="Interval">
+                <MenuItem x:Name="item10" Header="15s" Click="item10_Click"/>
+                <MenuItem x:Name="item30" Header="30s" Click="item30_Click"/>
+                <MenuItem x:Name="item60" Header="60s" Click="item60_Click"/>
+                <MenuItem x:Name="item90" Header="90s" Click="item90_Click"/>
+                <MenuItem x:Name="item180" Header="3min" Click="item180_Click"/>
+                <MenuItem x:Name="item300" Header="5min" Click="item300_Click"/>
+                <MenuItem x:Name="item600" Header="10min" Click="item600_Click"/>
+                <MenuItem x:Name="item900" Header="15min" Click="item900_Click"/>
             </MenuItem>
-            <MenuItem Header="一時停止/再開" Click="Pause" InputGestureText="Space"/>
-            <MenuItem x:Name="FullScreen" Header="全画面表示/解除" Click="FullScreen_Click" InputGestureText="Enter"/>
-            <MenuItem Header="グレースケール ON/OFF" Click="GrayScale" InputGestureText="C or S"/>
-            <MenuItem Header="グリッド ON/OFF" Click="Grid" InputGestureText="G"/>
-            <MenuItem x:Name="MenuInfo" Header="進捗状況 ON/OFF" Click="info_Click" InputGestureText="I"/>
-            <MenuItem x:Name="menuProgress" Header="プログレスバー ON/OFF" Click="menuProgress_Click" InputGestureText="P"/>
-            <MenuItem Header="背景色" InputGestureText="B">
-                <MenuItem x:Name="White_Background" Header="白" Click="White"/>
-                <MenuItem x:Name="Black_Background" Header="黒" Click="Black"/>
+            <Separator />
+            <MenuItem x:Name="MenuRepeat" Header="Repeat" Click="MenuRepeat_Click"/>
+            <MenuItem Header="Pause" Click="Pause" InputGestureText="Space"/>
+            <Separator />
+            <MenuItem x:Name="FullScreen" Header="FullScreen" Click="FullScreen_Click" InputGestureText="Enter"/>
+            <MenuItem Header="GrayScale ON/OFF" Click="GrayScale" InputGestureText="C or S"/>
+            <MenuItem Header="Grid ON/OFF" Click="Grid" InputGestureText="G"/>
+            <MenuItem x:Name="MenuInfo" Header="Status ON/OFF" Click="info_Click" InputGestureText="I"/>
+            <MenuItem x:Name="menuProgress" Header="Progress ON/OFF" Click="menuProgress_Click" InputGestureText="P"/>
+            <MenuItem Header="Background" InputGestureText="B">
+                <MenuItem x:Name="MenuWhiteBackground" Header="White" Click="White"/>
+                <MenuItem x:Name="MenuBlackBackground" Header="Black" Click="Black"/>
             </MenuItem>
-            <MenuItem x:Name="reset" Header="リセット" Click="reset_Click"/>
+            <Separator></Separator>
+            <MenuItem x:Name="reset" Header="Reset" Click="reset_Click"/>
+            <MenuItem x:Name="quit" Header="Quit" Click="quit_Click"/>
         </fw:AcrylicContextMenu>
     </Window.ContextMenu>
 
@@ -40,7 +47,7 @@
 
 
 
-        <Label x:Name="text" Content="{Binding  Message}" FontFamily="Arial Black" HorizontalContentAlignment="Center" FontSize="48" UseLayoutRounding="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Opacity="0.8"/>
+        <TextBlock x:Name="text"  Text="{Binding  Message}" FontFamily="Arial Black" FontSize="48" UseLayoutRounding="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Opacity="0.8" TextWrapping="WrapWithOverflow" TextAlignment="Center"/>
 
 
         <Image x:Name="image_" AllowDrop="True" PreviewDragEnter="Image_PreviewDragEnter" PreviewDragOver="Image_PreviewDragOver" PreviewDrop="Image_PreviewDrop">
@@ -54,7 +61,7 @@
         </Canvas>
 
         <ProgressBar x:Name="progressbar" Margin="-1,0" Grid.Row="1" Foreground="#FF63C5CF" Background="{x:Null}" BorderBrush="{x:Null}"/>
-        <Label x:Name="info_label" Content="{Binding info_Message}" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#7FFFFFFF" RenderTransformOrigin="0.5,0.5" Padding="5,0,5,2"/>
+        <Label x:Name="info_label" Content="{Binding info_Message}" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#7FFFFFFF" RenderTransformOrigin="0.5,0.5" Padding="5,0,5,2" FontSize="14" FontWeight="Bold"/>
 
     </Grid>
 </Window>
