--- a/Croquis(.NET Framework)/MainWindow.xaml
+++ b/Croquis(.NET Framework)/MainWindow.xaml
@@ -302,7 +302,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="500*" MinWidth="300"/>
-            <ColumnDefinition x:Name="GridSplitterColumn" Width="1*" MinWidth="7"/>
+            <ColumnDefinition x:Name="GridSplitterColumn" Width="Auto" MinWidth="7"/>
             <ColumnDefinition x:Name="thumbnailColumn" Width="155*" MinWidth="155"/>
         </Grid.ColumnDefinitions>
 
@@ -353,7 +353,7 @@
 
             <Image x:Name="image_" AllowDrop="True" PreviewDragOver="Image_PreviewDragOver" PreviewDrop="Image_PreviewDrop"/>
 
-            
+
             <Canvas Name="canvas"
                 SnapsToDevicePixels="True"
                 Loaded="canvas_Loaded"
@@ -362,28 +362,28 @@
 
             <ProgressBar x:Name="progressbar" Grid.Row="1" Foreground="#FFFF3030" Background="#4C000000" BorderBrush="{x:Null}" VerticalAlignment="Stretch"/>
             <Label x:Name="info_label" Content="{Binding info_Message}" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#7FFFFFFF" RenderTransformOrigin="0.5,0.5" Padding="5,0,5,2" FontSize="14" FontWeight="Bold"/>
-            <DockPanel x:Name="Panel" Grid.RowSpan="2" HorizontalAlignment="Right" Width="20" Cursor="Hand" Background="#00000000" Opacity="0.5" PreviewMouseLeftButtonDown="Rectangle_MouseDown"/>
+            <DockPanel x:Name="Panel" Grid.RowSpan="2" HorizontalAlignment="Right" Width="20" Cursor="Hand" Background="#00000000" Opacity="0.5" PreviewMouseLeftButtonDown="Panel_MouseDown"/>
         </Grid>
 
         <Grid Grid.Column="2" Background="White">
-            <ListView x:Name="Listview" ItemsSource="{Binding}"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Column="2" BorderBrush="White" SelectionChanged="Listview_SelectionChanged" Focusable="False" Margin="0,27,0,0" SelectionMode="Single">
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel/>
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Width="127" Height="127">
-                        <Image Source="{Binding Image}"></Image>
-                        <!--
+            <ListView x:Name="Listview" ItemsSource="{Binding}"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderBrush="White" SelectionChanged="Listview_SelectionChanged" Focusable="False" Margin="0,32,0,0" SelectionMode="Single" PreviewDrop="Image_PreviewDrop" PreviewDragOver="Image_PreviewDragOver">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Width="127" Height="127">
+                            <Image Source="{Binding Image}"></Image>
+                            <!--
                         <TextBlock Text="{Binding  Path=Title}"></TextBlock>
                         -->
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <ComboBox Style="{DynamicResource ComboBoxStyle1}" x:Name="comboBox" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="22" BorderBrush="Silver" Foreground="Black" Background="White" SelectionChanged="comboBox_SelectionChanged" Focusable="False" IsTabStop="False"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <ComboBox Style="{DynamicResource ComboBoxStyle1}" x:Name="comboBox" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="27" BorderBrush="#FFF0F0F0" Foreground="Black" Background="#FFF0F0F0" SelectionChanged="comboBox_SelectionChanged" Focusable="False" IsTabStop="False" FontSize="14" IsReadOnly="True" BorderThickness="2"/>
         </Grid>
         <GridSplitter x:Name="GridSplitter" Grid.Column="1" HorizontalAlignment="Stretch" Focusable="False" PreviewMouseLeftButtonUp="GridSplitter_PreviewMouseLeftButtonUp" PreviewMouseLeftButtonDown="GridSplitter_PreviewMouseLeftButtonDown"/>
 
